--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   postgres:
-    container_name: loki_db
+    container_name: loki-db-service
     image: postgres:10.6
     environment:
       - DEBUG=false
@@ -9,23 +9,29 @@ services:
       - POSTGRES_USER=loki
       - POSTGRES_PASSWORD=d0nt4get
       - POSTGRES_DB=loki
+      - POSTGRES_TEST_DB="loki_test"
+    volumes:
+      - ../loki-id-verification-service/create-test-db.sh:/docker-entrypoint-initdb.d/create-test-db.sh
     ports:
       - "5432:5432"
+
   loki:
-    container_name: loki_app
+    container_name: loki-id-verification-service
     privileged: true
     build:
       context: ./
       dockerfile: Dockerfile
-    networks:
-      - default
     environment:
       - DATABASE_URL=postgresql://loki:d0nt4get@postgres:5432/loki
-      - ENV=Production
+      - DATABASE_TEST_URL=postgresql://loki:d0nt4get@postgres:5432/loki_test
       - FLASK_APP=loki
       - FLASK_DEBUG=1
-      - FLASK_ENV=Production
+      - FLASK_ENV=Local
     links:
       - postgres:postgres
     ports:
       - "8080:8080"
+    volumes:
+      - ".:/code"
+    networks:
+      - default
