--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - POSTGRES_DB=loki
       - POSTGRES_TEST_DB="loki_test"
     volumes:
-      - ../loki-id-verification-service/create-test-db.sh:/docker-entrypoint-initdb.d/create-test-db.sh
+      - ./create-test-db.sh:/docker-entrypoint-initdb.d/create-test-db.sh
     ports:
       - "5432:5432"
 
