--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,7 @@
 variables:
-  FLASK_APP: loki
+  FLASK_APP: mars
   FLASK_DEBUG: 1
   FLASK_ENV: Local
-  POSTGRES_PASSWORD: d0nt4get
-  POSTGRES_USER: loki
-  POSTGRES_DB: loki
-  POSTGRES_TEST_DB: loki_test
 
 stages:
   - test
@@ -18,10 +14,9 @@ integration-test:
   variables:
     FLASK_ENV: Testing
     ENV: Testing
-    DATABASE_TEST_URL: postgresql://loki:d0nt4get@127.0.0.1:5432/loki_test
   script:
     - pip install -r requirements/test.txt
-    - python -m unittest discover -s ./loki/tests -p '*_tests.py'
+    - python -m unittest discover -s ./mars/tests -p '*_tests.py'
   services:
     - name: postgres:10.6
   except:
@@ -48,8 +43,8 @@ publish-docker-image-dev:
     - export DOCKER_HOST=tcp://localhost:2375
     - docker login -u $DOCKER_USER -p $DOCKER_PASS docker-builds.yellitech.io
   script:
-    - docker build -f Dockerfile --build-arg BUILD_ID=$CI_JOB_ID --build-arg BUILD_NUMBER=$CI_PIPELINE_ID --build-arg BUILD_TAG=$CI_COMMIT_TAG --build-arg GIT_COMMIT=$CI_COMMIT_SHA -t docker-builds.yellitech.io/loki-id-verification-service:$CI_COMMIT_SHA -t docker-builds.yellitech.io/loki-id-verification-service:latest .
-    - docker push docker-builds.yellitech.io/loki-id-verification-service
+    - docker build -f Dockerfile --build-arg BUILD_ID=$CI_JOB_ID --build-arg BUILD_NUMBER=$CI_PIPELINE_ID --build-arg BUILD_TAG=$CI_COMMIT_TAG --build-arg GIT_COMMIT=$CI_COMMIT_SHA -t docker-builds.yellitech.io/mars-id-verification-service:$CI_COMMIT_SHA -t docker-builds.yellitech.io/mars-id-verification-service:latest .
+    - docker push docker-builds.yellitech.io/mars-id-verification-service
   only:
     - develop
   tags:
@@ -65,7 +60,7 @@ deploy-dev:
     - helm init --client-only
   script:
     - echo $VALUES_DEV | base64 -d > ./values.yaml
-    - helm upgrade -f ./values.yaml --set image.tag=$CI_COMMIT_SHA loki ./helm
+    - helm upgrade -f ./values.yaml --set image.tag=$CI_COMMIT_SHA mars ./helm
   only:
     - develop
   tags:
@@ -81,8 +76,8 @@ publish-docker-image-accept:
     - docker login -u $DOCKER_USER -p $DOCKER_PASS docker-builds.yellitech.io
   script:
     - export DOCKER_IMAGE_TAG=$(echo $CI_COMMIT_REF_NAME | cut -d '/' -f 2)
-    - docker build -f Dockerfile --build-arg BUILD_ID=$CI_JOB_ID --build-arg BUILD_NUMBER=$CI_PIPELINE_ID --build-arg BUILD_TAG=$CI_COMMIT_TAG --build-arg GIT_COMMIT=$CI_COMMIT_SHA -t docker-builds.yellitech.io/loki-id-verification-service:$DOCKER_IMAGE_TAG .
-    - docker push docker-builds.yellitech.io/loki-id-verification-service
+    - docker build -f Dockerfile --build-arg BUILD_ID=$CI_JOB_ID --build-arg BUILD_NUMBER=$CI_PIPELINE_ID --build-arg BUILD_TAG=$CI_COMMIT_TAG --build-arg GIT_COMMIT=$CI_COMMIT_SHA -t docker-builds.yellitech.io/mars-id-verification-service:$DOCKER_IMAGE_TAG .
+    - docker push docker-builds.yellitech.io/mars-id-verification-service
   only:
     - /^release\/.*$/
   tags:
@@ -99,7 +94,7 @@ deploy-accept:
   script:
     - echo $VALUES_ACCEPT | base64 -d > ./values.yaml
     - export DOCKER_IMAGE_TAG=$(echo $CI_COMMIT_REF_NAME | cut -d '/' -f 2)
-    - helm upgrade -f ./values.yaml --set image.tag=$DOCKER_IMAGE_TAG loki ./helm
+    - helm upgrade -f ./values.yaml --set image.tag=$DOCKER_IMAGE_TAG mars ./helm
   only:
     - /^release\/.*$/
   tags:
