--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,30 +6,33 @@ services:
     environment:
       - DEBUG=false
       - DB_EXTENSION=plpgsql,pg_trgm
-      - POSTGRES_USER=webapp
+      - POSTGRES_USER=tyche
       - POSTGRES_PASSWORD=d0nt4get
-      - POSTGRES_DB=app
-      - POSTGRES_TEST_DB=app_test
-    volumes:
-      - ./create-test-db.sh:/docker-entrypoint-initdb.d/create-test-db.sh
+      - POSTGRES_DB=init-template
+      - POSTGRES_TEST_DB=init-template-test
+#    volumes:
+#      - ./create-test-db.sh:/docker-entrypoint-initdb.d/create-test-db.sh
     ports:
       - "5432:5432"
     networks:
       - net1
 
-  web:
-    container_name: webapp
+  api:
+    container_name: api
     privileged: true
     build:
       context: ./
       dockerfile: Dockerfile
     environment:
-      - DATABASE_URL=postgresql://webapp:d0nt4get@postgres:5432/app
-      - DATABASE_TEST_URL=postgresql://webapp:d0nt4get@postgres:5432/app_test
-      - FLASK_APP=web
+#      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/init-template
+      - DATABASE_URL=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/init-template
+      - DATABASE_TEST_URL=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/init-template-test
+      - FLASK_APP=api
       - FLASK_DEBUG=1
       - FLASK_ENV=development
       - APP_SETTINGS=Development
+    depends_on:
+      - postgres
     links:
       - postgres:postgres
     ports:
