differentiating between production and dev/local from Dockerfile side

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -10,7 +10,7 @@ COPY requirements /code/requirements
 RUN apk add py-configobj libusb py-pip python-dev gcc linux-headers
 RUN apk add --no-cache --virtual .build-deps zlib-dev jpeg-dev \
   build-base postgresql-dev libffi-dev python3-dev \
-    && pip3 install -r requirements/prod.txt \
+    && pip3 install -r requirements/dev.txt \
     && find /usr/local \
         \( -type d -a -name test -o -name tests \) \
         -o \( -type f -a -name '*.pyc' -o -name '*.pyo' \) \
@@ -28,6 +28,6 @@ RUN apk add --no-cache --virtual .build-deps zlib-dev jpeg-dev \
 RUN apk add --no-cache file-dev
 COPY . /code
 
-RUN chmod 755 docker_entrypoint.sh
-ENTRYPOINT ["sh", "docker_entrypoint.sh"]
-CMD ["uwsgi", "--need-app", "--logformat", "[%(ltime)] [UWSGI] \"%(method) %(uri) %(proto)\" %(status) %(size) \"%(referer)\" \"%(uagent)\""]
+RUN chmod 755 docker_entrypoint_dev.sh
+ENTRYPOINT ["sh", "docker_entrypoint_dev.sh"]
+CMD ["gunicorn", "--bind", "0.0.0.0:8080", "api.wsgi:app"]
