--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,45 @@
 version: '3.1'
 services:
   postgres:
-    container_name: app_db
+    container_name: pg_db
     image: postgres:13.0
     environment:
       - DEBUG=false
       - DB_EXTENSION=plpgsql,pg_trgm
       - POSTGRES_USER=tyche
       - POSTGRES_PASSWORD=d0nt4get
-      - POSTGRES_DB=init-template
-      - POSTGRES_TEST_DB=init-template-test
+      - POSTGRES_DB=tyche
 #    volumes:
 #      - ./create-test-db.sh:/docker-entrypoint-initdb.d/create-test-db.sh
     ports:
       - "5432:5432"
-    networks:
-      - net1
-
-  api:
-    container_name: api
-    privileged: true
-    build:
-      context: ./
-      dockerfile: Dockerfile-dev
-    environment:
-#      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/init-template
-      - DATABASE_URL=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/init-template
-      - DATABASE_TEST_URL=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/init-template-test
-      - FLASK_APP=api
-      - FLASK_DEBUG=1
-      - FLASK_ENV=development
-      - APP_SETTINGS=Development
-    depends_on:
-      - postgres
-    links:
-      - postgres:postgres
-    ports:
-      - "8080:8080"
-    volumes:
-      - ".:/code"
-    networks:
-      - net1
-
-networks:
-  net1:
-    driver: bridge
+#    networks:
+#      - net1
+#
+#  api:
+#    container_name: tyche_auth_service
+#    privileged: true
+#    build:
+#      context: ./
+#      dockerfile: Dockerfile-dev
+#    environment:
+##      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/tyche
+#      - DATABASE_URL=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/tyche
+#      - FLASK_APP=api
+#      - FLASK_DEBUG=1
+#      - FLASK_ENV=development
+#      - APP_SETTINGS=Development
+#    depends_on:
+#      - postgres
+#    links:
+#      - postgres:postgres
+#    ports:
+#      - "8080:8080"
+#    volumes:
+#      - ".:/code"
+#    networks:
+#      - net1
+#
+#networks:
+#  net1:
+#    driver: bridge
