--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.1'
 services:
   postgres:
-    container_name: app_db
+    container_name: tyche_psdb
     image: postgres:13.0
     environment:
       - DEBUG=false
       - DB_EXTENSION=plpgsql,pg_trgm
       - POSTGRES_USER=tyche
       - POSTGRES_PASSWORD=d0nt4get
-      - POSTGRES_DB=init-template
-      - POSTGRES_TEST_DB=init-template-test
+      - POSTGRES_DB=tyche
+      - POSTGRES_TEST_DB=tyche-test
 #    volumes:
 #      - ./create-test-db.sh:/docker-entrypoint-initdb.d/create-test-db.sh
     ports:
@@ -24,9 +24,9 @@ services:
       context: ./
       dockerfile: Dockerfile-dev
     environment:
-#      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/init-template
-      - DATABASE_URL=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/init-template
-      - DATABASE_TEST_URL=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/init-template-test
+#      - SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/tyche
+      - DATABASE_URL=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/tyche
+      - DATABASE_TEST_URL=postgresql+psycopg2://tyche:d0nt4get@postgres:5432/tyche-test
       - FLASK_APP=api
       - FLASK_DEBUG=1
       - FLASK_ENV=development
