--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - POSTGRES_PASSWORD=d0nt4get
       - POSTGRES_DB=tyche
       - POSTGRES_TEST_DB=tyche-test
-#    volumes:
-#      - ./create-test-db.sh:/docker-entrypoint-initdb.d/create-test-db.sh
+    volumes:
+      - ./create-test-db.sh:/docker-entrypoint-initdb.d/create-test-db.sh
     ports:
       - "5432:5432"
     networks:
