--- a/api/docs/admin.yml
+++ b/api/docs/admin.yml
@@ -1,7 +1,7 @@
 Check if services are available. Main purpose is to test readiness from the application. Returns a simple pong
 ---
 tags:
-  - Admin
+  - Health
 produces:
   - application/json
 definitions:
